more changes to welcome message

--- a/_posts/2015-1-21-Welcome.md
+++ b/_posts/2015-1-21-Welcome.md
@@ -3,11 +3,7 @@ layout: post
 title: Long Beach Tech Web & Application Professionals
 ---
 
-Welcome to Long Beach Tech Web & Application Professionals sandbox on github.  We have meetups every month.  Join us!
-
-# LBWP
-
-This project is used to organize __Long Beach Web & Mobile Professionals__ meetup.  Check out [the announcement for this months meetup!](https://github.com/lbtech/lbwp-meetups/tree/master/LBWP/Announcements)
+Welcome to Long Beach Tech Web & Application Professionals sandbox on github.  This project on github is used to organize the __Long Beach Web & Mobile Professionals__ meetup. We have meetups every month.  [Join us!](https://github.com/lbtech/lbwp-meetups/blob/master/LBWP/Announcements/LBCwebpro.md)
 
 ## Contact Info
 
