--- a/_posts/2015-02-21-yay.md
+++ b/_posts/2015-02-21-yay.md
@@ -5,3 +5,5 @@ published: true
 ## A New Post yay!
 
 Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+
+![scale](/images/scale13x-badge-small.png)
